# Agentic-mcp-weather-server

./: .gitignore  app.py  pyproject.toml  requirements.txt
mcpserver/: client-sse.py  client-stdio.py  server.py
server/: client.py  mcp.json  weather.py
