[project]
name = "mcp-weather-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "mcp-use>=1.7.0",
    "mcp[cli]>=1.27.0",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.35.0",
]
